--- a/styles/style-cadastro/cadastrar-sistema-ipad.css
+++ b/styles/style-cadastro/cadastrar-sistema-ipad.css
@@ -1,25 +1,70 @@
+@media screen and (min-width:711px) and (max-width:1170px) {
+ 
+ /*body {
+    background-color: orange;
+  }*/
 
+  h1 {
+    display: block;
+  }
 
-@media screen and (min-width:711px) and (max-width:1170px){
-   /* body {
-      background-color: rgb(200, 151, 38);
-    }*/
-  
-  
-  
-    
-  
+  h1#msg {
+    display: none;
+  }
+
+  input {
+    width: 14em;
+  }
+
+  select {
+    width: 14em;
+    font-size: 14px;
+  }
+
+  select>option {
+    font-size: 14px;
   }
 
 
-  @media screen and (min-width:912px) and (max-width:1368px){
-
-    /*body{
-        background-color: black;
-    }*/
-
-    
-   
-    
-
+  input#submits,
+  input#limpar {
+    margin-left: 0em;
+    width: 14em;
+    font-size: 14px;
   }
+
+  form {
+    width: 80%;
+  }
+  section {
+    width: 76%;
+}
+
+ 
+
+
+
+}
+
+
+@media screen and (min-width:912px) and (max-width:1368px) {
+
+ body {
+    background-color: black;
+  }
+
+
+  section {
+    width: 60%;
+  
+}
+
+form{
+  margin: auto;
+}
+
+
+
+
+
+}
