--- a/styles/style-cadastro/cadastrar-sistema-ipad.css
+++ b/styles/style-cadastro/cadastrar-sistema-ipad.css
@@ -50,7 +50,7 @@
 @media screen and (min-width:912px) and (max-width:1368px) {
 
  body {
-    background-color: black;
+    background-color: rgb(211, 95, 95);
   }
 
 
