--- a/styles/style-cadastro/cadastrar-sistema-ipad.css
+++ b/styles/style-cadastro/cadastrar-sistema-ipad.css
@@ -81,9 +81,15 @@ input#limpar {
 }
 .container_dependentes{
   height: 42em;
+
 }
 
 .input_dependentes{
   margin-top: 10em;
+}
+
+section.section_dependentes {
+  height: 39em;
+
 }
 }
