--- a/styles/style-cadastro/cadastrar-sistema-screen.css
+++ b/styles/style-cadastro/cadastrar-sistema-screen.css
@@ -6,33 +6,9 @@
 @media screen and (min-width: 120px) and (max-width: 710px) {
 
     body{
-        background-color: transparent;
+        background-color: green;
     }
-    header>img {
-        margin-left: 16px;
-        height: 65px;
-    }
-
-    header>a {
-        font-size: 16px;
-        width: 5em;
-        margin-right: 28px;
-    }
-    
-
-    section{
-        display: none;
-    }
-
-    h1{
-        display: none;
-    }
-
-    h1#msg{
-        text-align: center;
-        display: block;
-        font-weight: bold;
-    }
+   
 
 
 }
