--- a/styles/style-cadastro/cadastrar-sistema-screen.css
+++ b/styles/style-cadastro/cadastrar-sistema-screen.css
@@ -8,6 +8,30 @@
     body{
         background-color: green;
     }
+
+    header > img{
+        height: 55px;
+        margin-left: 1em;
+    }
+
+    header > a{
+        width: 5em;
+        font-size: 13px;
+    }
+
+    h1{
+        display: none;
+    }
+
+    h1#msg{
+        font-weight: bold;
+        display: block;
+    }
+
+
+    form{
+        display: none;
+    }
    
 
 
