--- a/styles/index-style/style-mobile.css
+++ b/styles/index-style/style-mobile.css
@@ -4,22 +4,22 @@
 
     header#caixa-header-main{
         justify-content: space-around;
+        gap:2em;
     }
 
 
     img#logo-cubatão-prefeitura{
-        height: 2.9em;
-        margin-left: 14px;
+        height: 52px;
+        margin-left: 1em;
 
     }
 
 
     #bnt-encerrar{
-        font-size: 15px;
-        padding: 9px;
-        margin-right: 14px;
+        font-size: 16px;
+        margin-right: 1em;
     }
-
+    
 
     img, svg {
         vertical-align: middle;
