--- a/styles/index-style/style-index.css
+++ b/styles/index-style/style-index.css
@@ -1,11 +1,17 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 /*CONGIFURAÇÕES GERAIS */
 
+:root{
 
+    --fontPadrao: 'Roboto', sans-serif;;
+
+}
 *{
     margin: 0;
     padding: 0;
+    font-family:'Roboto', sans-serif;;
 }
 
 
@@ -32,6 +38,7 @@ img#logo-cubatão-prefeitura{
 #bnt-encerrar{
     padding: 10px;
     font-size: 20px;
+    font-weight: bold;
     border: none;
     outline: none;
 }
@@ -55,8 +62,31 @@ main{
 
 div.card{
     width: 20rem;
+    height: 25em;
     margin-bottom: 3em;
     cursor: pointer;
+}
+
+
+.card-title{
+    font-weight: bold;
+}
+
+img, svg {
+    vertical-align: middle;
+    height: 12em;
+}
+
+a#link-card{
+    font-weight: bold;
+}
+
+p.card-text{
+    font-weight: 200;
+}
+
+.bold{
+    font-weight: bold;
 }
 
 
