--- a/styles/logins-style/login-ipad.css
+++ b/styles/logins-style/login-ipad.css
@@ -1,6 +1,11 @@
 @media screen and (min-width: 768px) and (max-width: 1180px) {
 
 
+    section#section-prefeitura-cubatao {
+        height: 21.9em;
+        
+    }
+
     .h2, h2 {
         font-size: 40px;
         margin-bottom: 10px;
