--- a/styles/logins-style/login-pc.css
+++ b/styles/logins-style/login-pc.css
@@ -44,8 +44,14 @@ section#section-prefeitura-cubatao {
     align-items: center;
     padding: 25px;
     border-radius: 0px 20px 20px 0px;
-
+    background-blend-mode: darken;
+    height: 26.9em;
+    background: #59595999 url(https://www.tce.sp.gov.br/sites/default/files/styles/max_800x800/public/noticias/Webdoor%20escolas%20inter.png?itok=6BAOOOOl);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+
 
 
 
@@ -53,7 +59,7 @@ section#formulario-section {
     display: flex;
     flex-direction: column;
     gap: 1em;
-    border-right: 4px solid #a7ba99;
+    border-right: 4px solid #ffffff;
     padding: 25px;
 }
 
@@ -65,7 +71,7 @@ form {
     padding: 15px;
 }
 
-form > input{
+form>input {
     font-family: var(--fontPadrao);
     outline: none;
     border-color: rgba(0, 0, 0, 0.364);
@@ -74,10 +80,10 @@ form > input{
     width: 22em;
 }
 
-form > input.submit{
+form>input.submit {
     outline: none;
     border: none;
-    padding:10px;
+    padding: 10px;
     font-weight: bold;
 
     color: #fff;
@@ -90,30 +96,32 @@ form > input.submit{
     margin-top: 10px;
 }
 
-form > input.submit:hover{
- background-color: #598e34;
+form>input.submit:hover {
+    background-color: #598e34;
 
 }
 
-input::placeholder{
+input::placeholder {
     font-family: var(--fontPadrao);
     color: rgba(0, 0, 0, 0.334);
 }
 
-.h2, h2 {
+.h2,
+h2 {
     font-family: var(--fontPadrao);
     font-size: 4rem;
     color: #057134;;
     margin-bottom: 20px;
 }
 
-p#acesso-negado{
+p#acesso-negado {
     font-size: 30px;
     font-weight: bold;
     color: brown;
 }
 
 
-img#picture-logo-prefeitura{
-    height:8em;
+img#picture-logo-prefeitura {
+    height: 8em;
+    margin: auto;
 }
