--- a/styles/logins-style/login-pc.css
+++ b/styles/logins-style/login-pc.css
@@ -1,24 +1,20 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
-
-
-:root {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;600&display=swap');
+:root{
 
     --fontPadrao: 'Roboto', sans-serif;
-    ;
+    --fontsuperior: 'Mulish', sans-serif;
 
 }
-
-
-* {
+*{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
 
 
-body,
-html {
+body, html{
     height: 100%;
 }
 
@@ -73,11 +69,11 @@ form {
 
 form>input {
     font-family: var(--fontPadrao);
-    outline: none;
     border-color: rgba(0, 0, 0, 0.364);
     font-size: 20px;
     padding: 10px;
     width: 22em;
+    outline-color: #598e34;
 }
 
 form>input.submit {
@@ -87,7 +83,8 @@ form>input.submit {
     font-weight: bold;
 
     color: #fff;
-    font-family: var(--fontPadrao);
+    font-family: var(--fontsuperior);
+    font-weight: bold;
     font-size: 25px;
     width: 100%;
     border-radius: 4px;
@@ -108,7 +105,8 @@ input::placeholder {
 
 .h2,
 h2 {
-    font-family: var(--fontPadrao);
+    font-family: var(--fontsuperior);
+    font-weight: bold;
     font-size: 4rem;
     color: #057134;;
     margin-bottom: 20px;
@@ -122,6 +120,9 @@ p#acesso-negado {
 
 
 img#picture-logo-prefeitura {
-    height: 13em;
+    height: 8em;
+    background-color: #fff;
     margin: auto;
+    padding: 5px;
+    border-radius:10px
 }
