--- a/styles/atividade-style/atividades-mobile.css
+++ b/styles/atividade-style/atividades-mobile.css
@@ -4,8 +4,8 @@
         justify-content: center;
     }
 
-    header>img#logo-header-prefeitura {
-        height: 3.5em;
+    img#logo-cubatão-prefeitura {
+        height: 3.3em;
         margin-left: 1em;
     }
 
