--- a/styles/atividade-style/atividades-mobile.css
+++ b/styles/atividade-style/atividades-mobile.css
@@ -12,20 +12,6 @@
     }
 
 
-
-
-    img#logo-cubatão-prefeitura {
-        height: 3.3em;
-        margin-left: 1em;
-    }
-
-    #bnt-encerrar {
-        font-size: 13px;
-        margin-right: 1em;
-    }
-
-
-
     img#usuario-login {
         display: none;
         height: 3em;
@@ -77,19 +63,24 @@
 
 
     div#mobile {
-
-        display: block;
-        text-align: center;
-        margin: auto;
-        background-color: rgb(245, 242, 242);
-        padding: 10px;
-        margin-bottom: 2em;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: rgb(48, 154, 94);
+        padding: 15px;
+        margin-bottom: 4em;
     }
 
     a.links-header-mobile {
-        font-family: var(--fontPadrao);
-        font-weight: 200;
-        font-size: 18px;
+        font-family: var(--fontsuperior);
+        font-weight: bold;
+        font-size: 20px;
+        color: #fff;
+        
+    }
+
+    a.links-header-mobile:hover{
+        color: #efeeee;
     }
 
     main {
@@ -116,7 +107,8 @@
 
 
     a>div.cards-atividades>img.foto-icon-card {
-        height: 5em;
+        height: 4.8em;
+        margin-bottom: 1em;
 
     }
 
