--- a/styles/atividade-style/atividades-pc.css
+++ b/styles/atividade-style/atividades-pc.css
@@ -256,6 +256,7 @@ a>div.cards-atividades>img.foto-icon-card {
     border: 3px solid rgb(92, 240, 76);
     border-radius: 50%;
     padding: 10px;
+    margin-bottom: 1em;
 }
 
 
