--- a/style.css
+++ b/style.css
@@ -190,8 +190,9 @@ button#button-submit {
     div.container {
         flex-direction: column;
         gap: 1em;
+        height: 100%;
         width: 100%;
-        height: 100vh;
+        border-radius: 0;
     }
 
     div.container-pictures{
@@ -200,7 +201,7 @@ button#button-submit {
 
     div.container-pictures>img {
         width: 90%;
-        height: 20em;
+        height: 14rem;
     }
 
     
