--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
     background-color: #efefef;
-    height: 100vh;
+    background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
