--- a/style.css
+++ b/style.css
@@ -12,9 +12,14 @@
 
 body {
     background-color: #efefef;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+html{
+    height: 100vh;
 }
 
 div.container {
