--- a/style.css
+++ b/style.css
@@ -216,8 +216,8 @@ button#button-submit:hover{
     }
 
     div.container-pictures>img {
-        width: 100%;
-        height: 8rem;
+        width: 80%;
+        height: 13rem;
     }
 
 
@@ -278,8 +278,8 @@ button#button-submit:hover{
     }
 
     div.container-pictures>img {
-        width: 80%;
-        height: 14rem;
+        width: 94%;
+        height: 19rem;
     }
 
 
@@ -302,4 +302,10 @@ button#button-submit:hover{
         font-size: 1.3rem;
     }
 
+}
+
+@media (min-width: 100px) AND (max-width: 320px){
+    div.container-pictures{
+        display: none;
+    }
 }
